src/objects/npsp__Rollup__mdt.object
<CustomObject>
    <description>NPSP Customizable Rollup definitions</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Amount_Field__c</fullName>
        <label>Amount Field</label>
        <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Amount_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>RollupsAmount</relationshipLabel>
        <relationshipName>RollupsAmount</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Amount_Object__c</fullName>
        <label>Amount Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>RollupAmount</relationshipLabel>
        <relationshipName>RollupAmount</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Date_Field__c</fullName>
        <label>Date Field</label>
        <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Date_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>RollupsDate</relationshipLabel>
        <relationshipName>RollupsDate</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Date_Object__c</fullName>
        <label>Date Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>RollupsDate</relationshipLabel>
        <relationshipName>RollupsDate</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <label>Description</label>
        <length>1020</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Detail_Field__c</fullName>
        <label>Field to Roll Up</label>
        <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Detail_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>RollupsDetail</relationshipLabel>
        <relationshipName>RollupsDetail</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Detail_Object__c</fullName>
        <label>Detail Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>RollupsDetail</relationshipLabel>
        <relationshipName>RollupsDetail</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Filter_Group__c</fullName>
        <label>Filter Group</label>
        <referenceTo>npsp__Filter_Group__mdt</referenceTo>
        <relationshipLabel>Rollups</relationshipLabel>
        <relationshipName>Rollups</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Integer__c</fullName>
        <description>Integer value to indicate how many years ago or days back to roll-up for</description>
        <label>Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                    <default>true</default>
                    <label>Count</label>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Largest</fullName>
                </value>
                <value>
                    <fullName>Smallest</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
                <value>
                    <fullName>Years_Donated</fullName>
                    <label>Years Donated</label>
                </value>
                <value>
                    <fullName>Donor_Streak</fullName>
                    <label>Donor Streak</label>
                </value>
                <value>
                    <fullName>Best_Year</fullName>
                    <label>Best Year</label>
                </value>
                <value>
                    <fullName>Best_Year_Total</fullName>
                    <label>Best Year Total</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Summary_Field__c</fullName>
        <label>Target Field</label>
        <metadataRelationshipControllingField>npsp__Rollup__mdt.npsp__Summary_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>RollupsSummary</relationshipLabel>
        <relationshipName>RollupsSummary</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Summary_Object__c</fullName>
        <label>Target Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>RollupsSummary</relationshipLabel>
        <relationshipName>RollupsSummary</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Time_Bound_Operation_Type__c</fullName>
        <description>Related to the Integer__c field. The value in that field represents the number of Years to sum or the number of days back to sum amounts for.</description>
        <label>Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All_Time</fullName>
                    <default>true</default>
                    <label>All Time</label>
                </value>
                <value>
                    <fullName>Years_Ago</fullName>
                    <label>Years Ago</label>
                </value>
                <value>
                    <fullName>Days_Back</fullName>
                    <label>Days Back</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Use_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that Fiscal Year is to be used instead of Calendar year</description>
        <label>Use Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <label>Rollup</label>
    <pluralLabel>Rollups</pluralLabel>
</CustomObject>